# tap-rickandmorty

./: README.md  meltano.yml  pyproject.toml  tap-rickandmorty.sh  tox.ini
tap_rickandmorty/: auth.py  client.py  streams.py  tap.py
tap_rickandmorty/schemas/: characters.json  episodes.json  locations.json
tap_rickandmorty/tests/: __init__.py  test_core.py
