[tool.poetry]
name = "tap-rickandmorty"
version = "0.0.1"
description = "`tap-rickandmorty` is Singer tap for RickAndMorty, built with the Singer SDK."
authors = ["Claire Carroll"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-rickandmorty = 'tap_rickandmorty.tap:TapRickAndMorty.cli'
